# Moisture-Detection-Android

./: .gitignore  README.md  pyproject.toml  run_termux.sh  sensortest.py  ui.py
